@@ -89,6 +89,7 @@
     <File name="./MonoDevelop.DesignerSupport.Toolbox/CompactToolboxView.cs" subtype="Code" buildaction="Compile" />
     <File name="./icons/md-design-listboxtoggle.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./MonoDevelop.DesignerSupport.Toolbox/ToolboxConfiguration.cs" subtype="Code" buildaction="Compile" />
+    <File name="./MonoDevelop.DesignerSupport/Commands.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="False" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
